--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "mapapi",
+  "name": "navigator-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.1",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.1.0",
-    "sqlite": "^4.1.2",
-    "sqlite3": "^5.1.6",
-    "ws": "^8.13.0"
+    "nodemailer": "^6.9.1",
+    "sqlite3": "^5.1.6"
   }
 }
